@@ -1,7 +1,7 @@
-# This Build.PL for Pandoc-Elements was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.010.
+# This Build.PL for Pandoc-Elements was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.014.
 use strict;
 use warnings;
 
 use 5.010001;
-use Module::Build::Tiny 0.039;
+use Module::Build::Tiny 0.034;
 Build_PL();
