@@ -1,6 +1,8 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Remove deprecated script pandocwalk
+    - Remove module Pandoc::Filter::Lazy
 
 0.30  2017-01-31 21:23:11 CET
     - Fix and extend method to_pandoc
